--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2252,3 +2252,100 @@ body.page-template .post-title {
    End of file. Animations should be the last thing here. Do not add stuff
    below this point, or it will probably fuck everything up.
    ========================================================================== */
+
+/* Post images */
+
+body:not(.post-template) .post {
+    position: relative;
+}
+body:not(.post-template) .post-image {
+    height: 90%;
+    width: 30%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+}
+body:not(.post-template) .post-image img {
+    height: 150%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+body:not(.post-template) .post-image::after {
+    content: "";
+    position: absolute;
+    background: #fff;
+    width: 40%;
+    height: 110%;
+    top: 0;
+    right: 0;
+    transform: rotateZ(8deg) translate(50%, -5%);
+}
+body:not(.post-template) .post:nth-child(odd) .post-image {
+    left: auto;
+    right: 0;
+}
+body:not(.post-template) .post:nth-child(odd) .post-image::after {
+    right: auto;
+    left: 0;
+    transform: rotateZ(-8deg) translate(-50%, -5%);
+}
+
+body:not(.post-template) .post-header,
+body:not(.post-template) .post-excerpt,
+body:not(.post-template) .post-meta {
+    margin-right: 0;
+    margin-left: 30%;
+}
+
+body:not(.post-template) .post:nth-child(odd) .post-header,
+body:not(.post-template) .post:nth-child(odd) .post-excerpt,
+body:not(.post-template) .post:nth-child(odd) .post-meta {
+    margin-right: 30%;
+    margin-left: 0;
+}
+
+@media only screen and (max-width: 500px) {
+    body:not(.post-template) .post-image {
+        height: 45px;
+        width: 100%;
+    }
+    body:not(.post-template) .post-image img {
+        height: auto;
+        width: 100%;
+    }
+    body:not(.post-template) .post-image::after {
+        width: 100%;
+        height: 40%;
+        top: auto;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        transform: rotateZ(2deg) translate(0%, 50%);
+    }
+    body:not(.post-template) .post:nth-child(odd) .post-image {
+        right: 0;
+        left: 0;
+    }
+    body:not(.post-template) .post:nth-child(odd) .post-image::after {
+        right: 0;
+        left: 0;
+        transform: rotateZ(-2deg) translate(0%, 50%);
+    }
+
+    body:not(.post-template) .post-header,
+    body:not(.post-template) .post-excerpt,
+    body:not(.post-template) .post-meta,
+    body:not(.post-template) .post:nth-child(odd) .post-header,
+    body:not(.post-template) .post:nth-child(odd) .post-excerpt,
+    body:not(.post-template) .post:nth-child(odd) .post-meta {
+        margin-right: 0;
+        margin-left: 0;
+    }
+
+    body:not(.post-template) .post-header {
+        padding-top: 50px;
+    }
+}
