--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -6,6 +6,9 @@
 {{!-- This is the post loop - each post will be output using this markup --}}
 {{#foreach posts}}
 <article class="{{post_class}}">
+    <section class="post-image">
+        <img src="{{image}}" alt="{{title}}">
+    </section>
     <header class="post-header">
         <h2 class="post-title"><a href="{{url}}">{{title}}</a></h2>
     </header>
